# LieDetect

./: .gitignore  LICENSE  LieDetect_Experiments_Cyclooctane.ipynb  LieDetect_Experiments_DensityEstimation.ipynb  LieDetect_Experiments_Physics.ipynb  LieDetect_Illustrations.ipynb  LieDetect_Tutorial.ipynb  README.md  functions_20240715.py  pyproject.toml
liedetect/: FastLiePCA.py  FastMatrixOptimization.py  LiePCA.py  __init__.py  datasets.py  lie_optimization.py  lie_pca.py  matrix_manipulation.py  matrix_optimization.py
liedetect/.ipynb_checkpoints/: FastMatrixOptimization-checkpoint.py  datasets-checkpoint.py
notebooks/: cyclooctane.ipynb  density_estimation.ipynb  physics.ipynb  steerable_cnn.ipynb
notebooks/data/: steerable_cnn_b1s.npy  steerable_cnn_b2s.npy  steerable_cnn_b3s.npy  steerable_cnn_b4s.npy  steerable_cnn_b5s.npy  steerable_cnn_b6s.npy
src/: algebra.py  liepca.py  optimization.py  orbits.py
tests/: test_algebra.py  test_liepca.py  test_optimization.py  test_orbits.py
