[tool.poetry]
name = "liedetect"
version = "0.1.0"
description = "LieDetect: Detection of representation orbits of compact Lie groups from point clouds"
authors = ["Raphaël Tinarrage <raphael.tinarrage@ist.ac.at>", "Henrique Ennes <henrique.lovisi-ennes@inria.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymanopt = "^2.2.1"
autograd = "^1.8.0"
matplotlib = "^3.10.3"
pot = "^0.9.5"
scipy = "^1.15.3"
scikit-learn = "^1.7.0"
notebook = "^7.4.3"
gudhi = "^3.11.0"
py3dmol = "^2.5.0"
rdkit = "^2025.3.3"
tensorflow = "^2.19.0"
open3d = "^0.19.0"
torch = "^2.7.1"
torchvision = "^0.22.1"
e2cnn = "^0.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
